--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,7 +56,7 @@
           <%= yield %>
 	</div>
 	<!-- end div#content -->
-        <div style="clear: both; height: 1px"></div>
+        <div class="cut"></div>
       </div>
     </div>
     <!-- end div#page -->
