--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -254,11 +254,12 @@ th {
 /* Content */
 
 #content {
-  padding-top: 15px;
+  padding-top: 5px;
 }
 
 #sidebar + #content {
-  margin-left: 228px;
+  width: 635px;
+  float: right;
 }
 
 .post {
@@ -306,7 +307,7 @@ th {
 #sidebar {
   float: left;
   width: 208px;
-  padding-top: 15px;
+  padding-top: 5px;
 }
 
 #sidebar ul {
