--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -38,7 +38,9 @@
       <% product = ff.object %>
       <li>
         Title: <%= ff.text_field :title %> Quantity: <%= ff.text_field :quantity, :size => 4 %>
-        <% unless product.new_record? %>
+        <% if product.new_record? %>
+          <%= ff.hidden_field :product_id, :value => 0 %>
+        <% else %>
           Delete? <%= ff.check_box :_destroy %>
         <% end %>
       </li>
