delivery and contacts; remove Delete? from variations, this will messup orders and cart, so just set quantity to 0

--- a/app/views/homes/contacts.html.erb
+++ b/app/views/homes/contacts.html.erb
@@ -1,1 +1,5 @@
 <% title('Contacts') %>
+
+<p>Мы находимся в Кишиневе, Молдова. По адресу: Онисифор Гибу 2.</p>
+<p>email: ecigs@ecigs.md<br />
+тел: 79014664 (с 10:00 до 18:00)</p>
