orders controller specs

--- a/app/views/homes/contacts.html.erb
+++ b/app/views/homes/contacts.html.erb
@@ -1,8 +1,8 @@
 <% title('Contacts') %>
 
-<p>Мы находимся в Кишиневе, Молдова. По адресу: Онисифор Гибу 2.</p>
-
 <p>email: vr.zdor@gmail.com<br />
 тел: 79014664 (с 10:00 до 18:00)</p>
+
+<p>Заказ можно забрать по адресу: Кишиневе, Молдова, Онисифор Гибу 2.</p>
 <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps/ms?ie=UTF8&amp;hl=ru&amp;msa=0&amp;ll=47.037214,28.777007&amp;spn=0.031768,0.064716&amp;iwloc=00049e5aaec323c2e8275&amp;msid=209457698861768306100.00049e5aa7a7520cfcf41&amp;output=embed"></iframe><br /><small>Просмотреть <a href="http://maps.google.com/maps/ms?ie=UTF8&amp;hl=ru&amp;msa=0&amp;ll=47.037214,28.777007&amp;spn=0.031768,0.064716&amp;iwloc=00049e5aaec323c2e8275&amp;msid=209457698861768306100.00049e5aa7a7520cfcf41&amp;source=embed" style="color:#0000FF;text-align:left">ecigs.md</a> на карте большего размера</small>
 
