--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,22 +1,32 @@
 <%= admin_title("Order ##{@order.id}") %>
 
-
 <div id="cart-page">
-  <ul>
-    <li>Date: <%= @order.created_at.short %></li>
-    <li>State: In Process</li>
-  </ul>
-  <br />
-  <%= render :partial => "/orders/order_lines" %>
+  <%= form_for @order, :url => admin_order_path(@order) do |f| %>
+    <ul>
+      <li>Date: <%= @order.created_at.short %></li>
+      <li>State: <%= order_status_select(f) %></li>
+    </ul>
+    <%= render :partial => "/orders/order_lines" %>
 
-  <% if address = @order.order_address %>
-    <div id="delivery-address">
-      <h3>Delivery address</h3>
-      Street: <%= h(address.street) %><br />
-      Phone number: <%= h(address.phone_number) %><br />
-      <% if address.phone_number2.present? %>
-        Secondary phone number: <%= h(address.phone_number2) %>
-      <% end %>
-    </div>
+    <% if address = @order.order_address %>
+      <div id="delivery-address">
+        <h3>Delivery address</h3>
+        Street: <%= h(address.street) %><br />
+        Phone number: <%= h(address.phone_number) %><br />
+        <% if address.phone_number2.present? %>
+          Secondary phone number: <%= h(address.phone_number2) %>
+        <% end %>
+      </div>
+    <% end %>
+
+    <% if @order.notes.present? %>
+      <div id="notes">
+        <h3>Notes</h3>
+        <%= h(@order.notes) %>
+      </div>
+    <% end %>
+    <br />
+
+    <%= submit_tag 'Update', :class => "button" %>
   <% end %>
 </div>
