rename order_line.price to unit_price. Copy product.price to unit_price on create

--- a/app/views/orders/_order_lines.html.erb
+++ b/app/views/orders/_order_lines.html.erb
@@ -19,7 +19,7 @@
         <% end %>
       </td>
       <td><%= ol.quantity %></td>
-      <td><%= product.price %></td>
+      <td><%= ol.unit_price %></td>
       <td><%= ol.price %></td>
     </tr>
   <% end %>
