--- a/app/views/carts/_order_lines_form.html.erb
+++ b/app/views/carts/_order_lines_form.html.erb
@@ -3,10 +3,10 @@
   <table width="100%">
     <tr>
       <th width="2%">#</th>
-      <th>Title</th>
-      <th width="15%">Quantity</th>
-      <th width="15%">Unit price</th>
-      <th>Price</th>
+      <th><%= t(:title) %></th>
+      <th width="15%"><%= t(:quantity) %></th>
+      <th width="15%"><%= t(:unit_price) %></th>
+      <th><%= t(:price) %></th>
     </tr>
     <% position = -1 %>
     <%= f.fields_for :order_lines do |ff| %>
@@ -25,7 +25,7 @@
         </td>
         <td>
           <%= ff.text_field :quantity, :size => 4 %><br />
-          <small>(<%= link_to "Delete", delete_cart_path(:position => (position += 1)) %>)</small>
+          <small>(<%= link_to t(:delete), delete_cart_path(:position => (position += 1)) %>)</small>
         </td>
         <td><%= product.price %></td>
         <td><%= ol.price %></td>
@@ -33,14 +33,14 @@
     <% end %>
     <tr>
       <td colspan="3"></td>
-      <td>Delivery (<%= link_to '?', delivery_home_path %>):</td>
+      <td><%= t(:delivery) %> (<%= link_to '?', delivery_home_path %>):</td>
       <td><%= @cart.delivery_cost %></td>
     </tr>
     <tr>
       <td colspan="3"></td>
-      <td>Total:</td>
+      <td><%= t(:total) %>:</td>
       <td><%= @cart.total_with_delivery %></td>
     </tr>
   </table>
-  <p><%= submit_tag "Update quantity" %></p>
+  <p><%= submit_tag t(:update_quantity) %></p>
 <% end %>
