--- a/app/views/homes/delivery.html.erb
+++ b/app/views/homes/delivery.html.erb
@@ -1,7 +1,7 @@
-<% title('Delivery and Payment') %>
+<% title(I18n.t(:delivery_payment)) %>
 
 <p>Мы осуществляем доставку только по Кишиневу. Время доставки: с 10:00 до 18:00, обычно через несколько часов после оформления заказа. Стоимость доставки: <%= Order.delivery_cost %> лей. Мы заранее с вами свяжемся и договоримся о времени, но если вы уверены что сможете принять посылку, укажите в примичании к заказу, что вы будете на месте.</p>
 <p>Вы так-же можете сами забрать заказ: <%= link_to 'куда ехать', contacts_home_path %>.</p>
 
-<h3>Оплата</h3>
+<h3><%= I18n.t(:payment) %></h3>
 <p>Оплата осуществляется при получении посылки.</p>
