--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,13 +22,13 @@
         <div style="clear: both;"></div>
 
         <div id="user-links">
-          <%= link_to 'Cart', cart_path, :class => "cart" %>&nbsp;
-          <%= link_to 'Order history', orders_path %>&nbsp;
+          <%= link_to t(:cart), cart_path, :class => "cart" %>&nbsp;
           <% if user_signed_in? %>
-            Signed in as <%= current_user.email %>.
-            <%= link_to "Sign out", destroy_user_session_path %>
+            <%= link_to t(:orders_history), orders_path %>&nbsp;
+            <%= t(:signed_in_as) %> <%= current_user.email %>.
+            <%= link_to t(:sign_out), destroy_user_session_path %>
           <% else %>
-            <%= link_to "Sign up", new_user_registration_path %> or <%= link_to "sign in", new_user_session_path %>
+            <%= link_to t(:sign_up), new_user_registration_path %> <%= t(:or) %> <%= link_to t(:sign_in), new_user_session_path %>
           <% end %>
         </div>
       </div>
