--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,26 +1,26 @@
-<% title("Order ##{@order.id}") %>
+<% title(t(:order_num, :num => @order.id)) %>
 
 <div id="cart-page">
   <ul>
-    <li>Date: <%= @order.created_at.short %></li>
-    <li>State: <%= order_status(@order) %></li>
+    <li><%= t(:order_date) %>: <%= @order.created_at.short %></li>
+    <li><%= t(:status) %>: <%= order_status(@order) %></li>
   </ul>
   <%= render :partial => "order_lines" %>
 
   <% if address = @order.order_address %>
     <div id="delivery-address">
-      <h3>Delivery address</h3>
-      Street: <%= h(address.street) %><br />
-      Phone number: <%= h(address.phone_number) %><br />
+      <h3><%= t(:delivery_address) %></h3>
+      <%= h(address.street) %><br />
+      <%= h(address.phone_number) %>
       <% if address.phone_number2.present? %>
-        Secondary phone number: <%= h(address.phone_number2) %>
+        <br /><%= h(address.phone_number2) %>
       <% end %>
     </div>
   <% end %>
 
   <% if @order.notes.present? %>
     <div id="notes">
-      <h3>Notes</h3>
+      <h3><%= t(:notes) %></h3>
       <%= h(@order.notes) %>
     </div>
   <% end %>
