--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -5,7 +5,7 @@
     <table class="order-list" width="100%">
       <tr>
         <th>#</th>
-        <th><%= t(:date) %></th>
+        <th><%= t(:order_date) %></th>
         <th><%= t(:status) %></th>
         <th><%= t(:items) %></th>
         <th><%= t(:total) %></th>
