remove copyright crap from the footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,8 +61,7 @@
     </div>
     <!-- end div#page -->
     <div id="footer">
-      <p id="legal">Copyright &copy; 2007 Featuring. All Rights Reserved. Designed by <a href="http://www.freecsstemplates.org/">Free CSS Templates</a>.</p>
-      <p id="links"><a href="#">Privacy Policy</a> | <a href="#">Terms of Use</a></p>
+      <p id="legal">Designed by <a href="http://www.freecsstemplates.org/">Free CSS Templates</a>.</p>
     </div>
     <!-- end div#footer -->
   </div>
