--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -53,7 +53,7 @@
 
   <div class="description">
     <h3><%= t(:product_description) %></h3>
-    <%= h(@product.description) %>
+    <%= textilize(@product.description) %>
   </div>
   <% end %>
 </div>
