--- a/app/views/layouts/products.html.erb
+++ b/app/views/layouts/products.html.erb
@@ -3,7 +3,7 @@
     <li>
       <ul>
         <% @tags.each do |tag| %>
-          <li <%= 'id="selected"'.html_safe if params[:tag] == tag.name %>><%= link_to h(tag.name) + " (#{tag.count})", products_path(:tag => tag.name) %></li>
+          <li <%= 'id="selected"'.html_safe if params[:tag] == tag.name %>><%= link_to h(tag.name) + " (#{tag.count})", tagged_products_path(tag.name) %></li>
         <% end %>
       </ul>
     </li>
