show Out of stock products

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,6 +11,9 @@
     <div class="product">
       <div class="photo"><%= link_to image_tag(product.photo.url(:thumb)), product %></div>
       <h3><%= link_to h(product.title), product %></h3>
+      <% unless product.in_stock? %>
+        <%= t(:out_of_stock) %>.<br />
+      <% end %>
       <%= textilize(product.summary) %> <%= link_to t(:more), product %>
       <div class="cut"></div>
     </div>
