--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -11,14 +11,18 @@
     <li><%= t(:similar_products) %>: <%= tags_links(@product) %></li>
     <li class="price"><%= t(:price) %>: <%= @product.price %></li>
     <% unless @product.has_variations? %>
-      <li><%= t(:available) %>: <%= @product.quantity %></li>
-      <li>
-        <%= f.fields_for :order_lines, OrderLine.new do |ff| %>
-          <%= ff.hidden_field :product_id, :value => @product.id %>
-          <%= t(:quantity) %>: <%= ff.text_field :quantity, :size => 4, :value => 1 %>
-          <%= submit_tag t(:add_to_cart), :class => "button cart-add" %>
-        <% end %>
-      </li>
+      <% if @product.in_stock? %>
+        <li><%= t(:available) %>: <%= @product.quantity %></li>
+        <li>
+          <%= f.fields_for :order_lines, OrderLine.new do |ff| %>
+            <%= ff.hidden_field :product_id, :value => @product.id %>
+            <%= t(:quantity) %>: <%= ff.text_field :quantity, :size => 4, :value => 1 %>
+            <%= submit_tag t(:add_to_cart), :class => "button cart-add" %>
+          <% end %>
+        </li>
+      <% else %>
+        <%= t(:out_of_stock) %>. <%= t(:let_us_know_if_you_want_the_product) %>.
+      <% end %>
     <% end %>
   </ul>
   <div class="cut"></div>
@@ -42,7 +46,9 @@
                 <% end %>
               </td>
             <% else %>
-              <td colspan="2">Out of stock</td>
+              <td colspan="2">
+                <%= t(:out_of_stock) %>
+              </td>
             <% end %>
           </tr>
         <% end %>
