--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -14,7 +14,7 @@
       <% unless product.in_stock? %>
         <%= t(:out_of_stock) %>.<br />
       <% end %>
-      <%= textilize(product.summary) %> <%= link_to t(:more), product %>
+      <%= textilize(product.short_summary) %> <%= link_to t(:more), product %>
       <div class="cut"></div>
     </div>
   <% end %>
