--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -6,7 +6,7 @@
   <%= f.text_field :title, :style => "width: 100%" %><br />
   <%= f.label :description %><br />
   <%= f.text_area :description, :size => "80x20", :style => "width: 100%" %><br />
-  <%= f.label :summary %> <small>(Will show description on the /products/index if you leave the summary blank)</smal><br />
+  <%= f.label :summary %> <small>(Will show description on the /products/index if you leave the summary blank)</small><br />
   <%= f.text_area :summary, :size => "80x5", :style => "width: 100%" %>
   <label for="product_tag_list">Tags</label><br />
   <%= f.text_field :tag_list, :style => "width: 100%" %><br />
