show Out of stock on products/index with different color

--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -469,6 +469,10 @@ li#selected a {
   border: 0;
 }
 
+p.out-of-stock {
+  color: red;
+}
+
 /* products/new|edit */
 #product-form {
   padding-bottom: 10px;
