--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -12,7 +12,7 @@
       <div class="photo"><%= link_to image_tag(product.photo.url(:thumb)), product %></div>
       <h3><%= link_to h(product.title), product %></h3>
       <% unless product.in_stock? %>
-        <%= t(:out_of_stock) %>.<br />
+        <p class="out-of-stock"><%= t(:out_of_stock) %>.</p>
       <% end %>
       <%= textilize(product.short_summary) %> <%= link_to t(:more), product %>
       <div class="cut"></div>
