show prices in local currency and in USD

--- a/app/views/carts/_order_lines_form.html.erb
+++ b/app/views/carts/_order_lines_form.html.erb
@@ -27,8 +27,8 @@
           <%= ff.text_field :quantity, :size => 4 %><br />
           <small>(<%= link_to t(:delete), delete_cart_path(:position => (position += 1)) %>)</small>
         </td>
-        <td><%= product.price %></td>
-        <td><%= ol.price %></td>
+        <td><%= local_price(product.price) %></td>
+        <td><%= local_price(ol.price) %></td>
       </tr>
     <% end %>
     <tr>
