--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <div id="header">
       <div id="logo">
 	<h1><a href="/">ecigs.md</a></h1>
-	<h2><a href="/">E-cigarretes</a></h2>
+	<h2><a href="/">электронные сигареты</a></h2>
       </div>
       <!-- end div#logo -->
       <div id="menu">
