--- a/app/views/homes/contacts.html.erb
+++ b/app/views/homes/contacts.html.erb
@@ -5,7 +5,7 @@
   <li>79014664</li>
 </ul>
 
-<p>Заказ можно забрать по адресу: Кишинев, Молдова, ул. Онисифор Гибу 2.</p>
+<p>Заказ можно забрать по адресу: Кишинев, Молдова, ул. Онисифор Гибу 2. <strong>Пожалуйста, напишите или позвоните перед тем как ехать</strong>.</p>
 
 <h3>Схема проезда</h3>
 <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps/ms?ie=UTF8&amp;hl=ru&amp;msa=0&amp;msid=209457698861768306100.00049e5aa7a7520cfcf41&amp;ll=47.040913,28.777399&amp;spn=0.010236,0.018239&amp;z=15&amp;iwloc=00049e704b7ae8bfd767b&amp;output=embed"></iframe><br /><small>Просмотреть <a href="http://maps.google.com/maps/ms?ie=UTF8&amp;hl=ru&amp;msa=0&amp;msid=209457698861768306100.00049e5aa7a7520cfcf41&amp;ll=47.040913,28.777399&amp;spn=0.010236,0.018239&amp;z=15&amp;iwloc=00049e704b7ae8bfd767b&amp;source=embed" style="color:#0000FF;text-align:left">ecigs.md</a> на карте большего размера</small>
