--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -100,6 +100,13 @@ th {
   background-color: #e0e0e0;
 }
 
+.notice {
+  color: red;
+  background-color: #fff19a;
+  padding: 5px 5px 5px 5px;
+  margin: 2px 0px 2px 0px;
+}
+
 /* Wrapper */
 
 #wrapper {
