delivery docs fix

--- a/app/views/homes/delivery.html.erb
+++ b/app/views/homes/delivery.html.erb
@@ -1,6 +1,9 @@
 <% title(I18n.t(:delivery_payment)) %>
 
-<p>Мы осуществляем доставку только по Кишиневу. Время доставки: с 10:00 до 18:00. Стоимость доставки: <%= Order.delivery_cost %> лей. Мы заранее с вами свяжемся и договоримся о времени, но если вы уверены что сможете принять посылку, укажите в примичании к заказу, что вы будете на месте.</p>
+<p>Мы осуществляем доставку только по Кишиневу. Могу выслать почтой, только надо придумать как деньги передать.</p>
+<p>Время доставки: 10:00 - 18:00.<br />
+  Стоимость доставки: <%= Order.delivery_cost %> лей</p>
+<p>Мы заранее с вами свяжемся и договоримся о времени, но если вы уверены что сможете принять посылку, укажите в примичании к заказу, что вы будете на месте.</p>
 <p>Вы так-же можете сами забрать заказ: <%= link_to 'куда ехать', contacts_home_path %>.</p>
 
 <h3><%= I18n.t(:payment) %></h3>
