--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,8 @@
   <%= javascript_include_tag :all %>
   <%= csrf_meta_tag %>
 
-  <link rel="icon" href="/images/favicon.png" sizes="32x32" />
-  <link rel="shortcut icon" href="/images/favicon.ico" />
+  <!-- <link rel="icon" href="/images/favicon.png" sizes="32x32" />
+  <link rel="shortcut icon" href="/images/favicon.ico" /> -->
 
   <%= render :partial => "/layouts/google_analytics" %>
 </head>
