--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -69,7 +69,7 @@
   <% end %>
 
   <div class="description">
-    <h3><%= t(:product_description) %></h3>
+    <h3 class="slight-visiable"><%= t(:product_description) %></h3>
     <%= textilize(@product.description) %>
   </div>
   <% end # /form %>
