--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -15,7 +15,9 @@
   <label for="product_quantity">Quantity</label><br />
   <%= f.text_field :quantity, :size => 5 %><br />
   <label for="product_photo">Photo</label><br />
-  <%= f.file_field :photo %>
+  <%= f.file_field :photo %><br />
+  <%= label :product, :position %><br />
+  <%= f.text_field :position, :size => 5 %>
 
   <h3>Assets</h3>
   <ul class="asset-list">
