changes to the Terms of warranty

--- a/app/views/homes/faq.html.erb
+++ b/app/views/homes/faq.html.erb
@@ -7,4 +7,4 @@
 </ul>
 
 <h3><%= t(:guaranty) %></h3>
-<p>Гарантия 2 месяца на батарейки. На атомайзеры гарантию не даем.</p>
+<p>Гарантия 1 месяц на батарейки, зарядку. На атомайзеры гарантию не даем.</p>
